# bitwolf-archived

./: .gitignore  Cargo.toml  clean_gen.sh  makefile
core/nds-core/: Cargo.toml
core/nds-core/src/: arm9.rs  bus.rs  core.rs  cpu.rs  debug.rs  engine.rs  interpreter.rs  lib.rs  rom.rs  test.rs
core/nds-core/src/arm9/: decode.rs  instructions.rs  registers.rs
core/nds-core/src/bus/: access.rs  read.rs  write.rs
core/nds-core/src/cpu/: arm9.rs
core/nds-core/src/cpu/arm9/: decode.rs  instructions.rs
core/nds-core/src/cpu/arm9/decode/: arm.rs
core/nds-core/src/debug/: rominfo.rs
core/nds-core/src/debug/disasm/: arm9.rs
core/nds-core/src/debug/disasm/arm9/: arm.rs
core/nds-core/src/interpreter/: arm9.rs
core/nds-core/src/interpreter/arm9/: arm.rs
core/nds-core/src/interpreter/arm9/arm/: branch.rs
cores/bitwolf/nintendo/gbc_backend/: Cargo.toml
cores/bitwolf/nintendo/gbc_backend/core/: Cargo.toml
cores/bitwolf/nintendo/gbc_backend/core/src/: cycles.rs  events.rs  lib.rs
cores/bitwolf/nintendo/gbc_backend/src/: lib.rs
cores/bitwolf/nintendo/gbc_backend/src/core/: cycles.rs  events.rs  mod.rs
cores/bitwolf/nintendo/gbc_backend/src/debug/: mod.rs
cores/bitwolf/nintendo/gbc_backend/src/engines/: mod.rs
cores/bitwolf/nintendo/gbc_backend/src/interfaces/: audio.rs  input.rs
cores/nintendo/gbc_backend/: Cargo.toml
cores/nintendo/gbc_backend/core/: Cargo.toml
cores/nintendo/gbc_backend/core/bus/: Cargo.toml
cores/nintendo/gbc_backend/core/bus/src/: lib.rs  memory_map.rs
cores/nintendo/gbc_backend/core/cpu/: Cargo.toml
cores/nintendo/gbc_backend/core/cpu/src/: cycles.rs  lib.rs  registers.rs
cores/nintendo/gbc_backend/core/ppu/: Cargo.toml
cores/nintendo/gbc_backend/core/ppu/src/: lib.rs  regs.rs
cores/nintendo/gbc_backend/core/src/: binder.rs  events.rs  lib.rs
cores/nintendo/gbc_backend/core/src/bus/: mod.rs
cores/nintendo/gbc_backend/core/src/cpu/: interrupt.rs  mod.rs
cores/nintendo/gbc_backend/core/src/engines/: mod.rs
cores/nintendo/gbc_backend/core/src/ppu/: regs.rs
cores/nintendo/gbc_backend/engines/interpreter/: Cargo.toml
cores/nintendo/gbc_backend/engines/interpreter/src/: events.rs  helper.rs  interrupts.rs  lib.rs
cores/nintendo/gbc_backend/engines/jit/: Cargo.toml
cores/nintendo/gbc_backend/engines/jit/src/: lib.rs
cores/nintendo/gbc_backend/src/: lib.rs
cores/nintendo/gbc_backend/src/debug/: mod.rs
cores/nintendo/gbc_backend/src/engines/interpreter/: mod.rs
cores/nintendo/gbc_backend/src/engines/jit/: mod.rs
frontend/: Cargo.toml
frontend/common/: Cargo.toml
frontend/common/src/: graphics.rs  lib.rs
frontend/cores/nds-frontend/: Cargo.toml
frontend/desktop/: Cargo.toml  cargs.rs  cla.rs  config.rs  core.rs  debug.rs  frontend.rs  gui.rs  main.rs  state.rs
frontend/desktop/bitwolf/nintendo/gbc_frontend/: Cargo.toml
frontend/desktop/bitwolf/nintendo/gbc_frontend/src/: audio.rs  backend.rs  input.rs  lib.rs  messages.rs  resources.rs  run.rs  state.rs  video.rs
frontend/desktop/common-frontend/: Cargo.toml
frontend/desktop/common-frontend/src/: debuggable.rs  destroy.rs  draw.rs  emulation.rs  frontendbox.rs  lib.rs  menubar.rs
frontend/desktop/common-frontend/src/constraints/: audio.rs  debug.rs  emulation.rs  input.rs  mod.rs  update.rs  video.rs
frontend/desktop/common-frontend/src/framebuffer/: access.rs  mod.rs
frontend/desktop/common-frontend/src/subwindows/: disassembler.rs
frontend/desktop/core/: nds.rs
frontend/desktop/core/nds/: gui.rs
frontend/desktop/core/nds/gui/: debug.rs
frontend/desktop/file_dialogue/: Cargo.toml
frontend/desktop/file_reader/: Cargo.toml
frontend/desktop/file_reader/src/: lib.rs
frontend/desktop/frontend/: Cargo.toml  nds_impl.rs
frontend/desktop/frontend/nintendo/gbc_frontend/: Cargo.toml
frontend/desktop/frontend/src/: lib.rs  menubar.rs
frontend/desktop/frontend/src/empty/: menu.rs  mod.rs
frontend/desktop/frontends/nintendo/gbc_frontend/: Cargo.toml
frontend/desktop/gui/: debug.rs  gfx.rs  menu.rs  window.rs
frontend/desktop/gui/debug/: cpu.rs  nds.rs
frontend/desktop/gui/debug/nds/: control.rs  disasm.rs  metadata.rs
frontend/desktop/imgui/: Cargo.toml
frontend/desktop/imgui/src/: create_context.rs  lib.rs
frontend/desktop/libaudio/: Cargo.toml
frontend/desktop/libaudio/src/: lib.rs
frontend/desktop/nintendo/gbc_frontend/: Cargo.toml
frontend/desktop/nintendo/gbc_frontend/src/: lib.rs
frontend/desktop/src/: backend_types.rs  cli.rs  common.rs  config.rs  cores.rs  debug_views.rs  display.rs  emu.rs  frontend_creator.rs  gui.rs  log.rs  main.rs  ui.rs  window_loop.rs  winow_loop.rs
frontend/desktop/src/backends/: mod.rs
frontend/desktop/src/backends/nintendo/: mod.rs
frontend/desktop/src/common/: bimsgq.rs  debug_view.rs  demsgq.rs
frontend/desktop/src/common/windows/: disassembler.rs
frontend/desktop/src/cores/: nds.rs
frontend/desktop/src/cores/nds/: core_loop.rs  core_update_loop.rs  debug_state.rs  debug_views.rs  update_panels.rs
frontend/desktop/src/debug_views/: cartridge.rs  control.rs  data.rs  disassembly.rs  registers.rs  view.rs
frontend/desktop/src/debug_views/data/: cartridge.rs  registers.rs
frontend/desktop/src/debug_views/view/: cartridge.rs  control.rs  disassembly.rs  registers.rs
frontend/desktop/src/default_backend/: menu.rs  mod.rs  update.rs
frontend/desktop/src/emu/: core.rs
frontend/desktop/src/gui/: debug_views.rs  gfx.rs  window.rs
frontend/desktop/src/gui/debug_views/: disassembly.rs
frontend/desktop/src/gui/gfx/: imgui_ctx.rs  window.rs
frontend/desktop/src/menu/: file.rs  mod.rs  options.rs
frontend/desktop/src/menubar/: debug.rs  emulation.rs  file.rs  help.rs  mod.rs  options.rs
frontend/desktop/src/menubar/debug/: mod.rs
frontend/desktop/src/menubar/emulation/: mod.rs
frontend/desktop/src/menubar/file/: mod.rs
frontend/desktop/src/msg_receiver/: files.rs
frontend/desktop/src/proc_flags/: mod.rs
frontend/desktop/src/ui/: gfx.rs  window_loop.rs
frontend/lib/: Cargo.toml
frontend/lib/src/: lib.rs
(+396 files in other folders)
