[workspace]
members = [
    # emulator core files.
    "core/core-util",
    "core/*",
    # emulator frontend files.
    "frontend/desktop",
    "frontend/desktop/common",
    "frontend/desktop/gui",
    "frontend/desktop/cores/*",
    # utility.
    "util",
    "util/macros",
]
# Required to determine version for wgpu.
resolver = "2"

[profile.release]
opt-level = 3
debug = 0
strip = "debuginfo"
debug-assertions = false 
lto = "fat"
panic = "abort"

[profile.dev]
opt-level = 1
debug = 2
debug-assertions = true 
panic = "unwind"
lto = "off"