[workspace]
members = [
    # Shared utility between backends.
    "cores/common-core",
    # The different backend cores.
    "cores/cores/nintendo/*",
    # Frontend desktop crates.
    "frontend/desktop/frontend/nintendo/*",
    "frontend/desktop/common-frontend",
    "frontend/desktop/imgui",
    "frontend/desktop/libaudio",
    "frontend/desktop",
    # Utility crate.
    "util",
    # Logging crate.
    "logger",
]
# Required to determine version for wgpu
resolver = "2"
