[workspace]
members = [
    # Frontend code.
    "frontend",
    "frontend/lib",
    # Common core code.
    "core/common/arm",
    "core/common/arm/arm-decode",
    "core/common/arm/arm-decode/macros",
    # Nintendo DS core.
    "core/nds",
]
resolver = "2"

[profile.dev]
opt-level = 1
overflow-checks = true