[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "desktop"
path = "desktop/main.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
argh = "0.1.3"
egui-wgpu = "0.21.0"
egui = "0.21.0"
egui-winit = "0.21.1"
anyhow = "1.0.71"
pollster = "0.3.0"

[dependencies.nds]
path = "../core"