[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[features]
nds-core = ["dep:nds"]
core-all = ["nds-core"]

nds-debug-views = ["nds?/debug-views"]
debug-all = ["nds-debug-views"]

nds-log = ["nds?/log"]
log-all = ["nds-log"]

log = []
debug-views = []

default = [
    "log",
    "debug-views",
    "core-all", 
    "debug-all", 
    "log-all"]

[dependencies]
# cores
nds = { path = "cores/nds", default_features = false, optional = true }

# common
common = { path = "common" }

#gui
gui = { path = "gui" }

# util
util = { path = "../../util" } 

# pollster, for awaiting async functions
pollster = "0.2.5"

# file dialogue crate
rfd = "0.8.4"

# asyncrhonous library for message queues
crossbeam = "0.8.2"
