[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[features]
nds-core = ["dep:nds-core"]
core-all = ["nds-core"]

debug-views = [
    "nds-core?/debug"
]
debug-all = ["debug-views"]

log = [
    "nds-core?/log"
]

default = [
    "log",
    "debug-views",
    "core-all", 
    "debug-all"
]

[dependencies]
# cores
nds-core = { path = "../../core/nds-core", default-features = false, optional = true }

# util
util = { path = "../../util" } 

# pollster, for awaiting async functions
pollster = "0.2.5"

# file dialogue crate
rfd = "0.8.4"

# asyncrhonous library for message queues
crossbeam = "0.8.2"

# imgui
imgui = {version = "0.8.2", features = ["tables-api"] }
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", rev = "a6d76b4dadc895e395be4bdfebe362e55c62be3b" }
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }

# winit
winit = { version = "0.26" }

# wgpu
wgpu = { version = "0.13" }