[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI.
imgui = {version = "0.8.2", features = ["tables-api"] }
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs", rev = "a6d76b4dadc895e395be4bdfebe362e55c62be3b" }
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
# Graphics library.
wgpu = "0.13"
# Cross-platform window creation.
winit = "0.26"
# Logging.
env_logger = "0.9.1"
# Polling async functons.
pollster = "0.2.5"
# Command line argument parsing.
clap = {version = "4.0.9", features = ["derive"]}

[dependencies.util]
path = "../../util"

[dependencies.nds]
path = "../../core"