[package]
name = "gbc_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logger crate.
logger = {path = "../../../../logger"}

# Backends common utility crate.
common-core = {path = "../../../common-core"}

# Utility crate.
util = {path = "../../../../util"}
