[package]
name = "gbc_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Backend crate.
gbc_backend = {path = "../../../../cores/nintendo/gbc_backend"}

# Generic frontend implementation.
common-frontend = {path = "../../common-frontend"}

# Imgui crate.
imgui = {path = "../../imgui"}
