[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging crate for debug output.
logger = {path = "../../../../../logger"}

# Backends common utility crate.
common-core = {path = "../../../../common-core"}

# Utility crate.
util = {path = "../../../../../util"}