[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logger crate.
logger = {path = "../../../../../logger"}

# Common crate.
common-backend = {path = "../../../../common-backend"}

# CPU crate.
cpu = {path = "../../core/cpu"}

# PPU crate.
ppu = {path = "../../core/ppu"}

# Bus crate.
bus = {path = "../../core/bus"}